--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 <p>High expectations and enthusiasm for easy Internet of Things (IoT) Cloud-based projects based on the Texas Instruments (TI) CC2650 SensorTag (aka SensorTag 2.0) quickly dissipated into a ho-hum “nice idea, but …” afterthought. Why? It’s tough to wrangle the Bluetooth “smart” connectivity into a simple, practical project. Here’s the problem: SensorTag attempts to establish a link with a Bluetooth Low Energy compliant device by advertising its device ID for approximately 2 minutes. This advertising period is initiated by a user pressing a button located on SensorTag. This direct user physical contact handicaps installing SensorTag in a remote or inaccessible area. Unfortunately, one of the primary use applications for SensorTag is in a remote sensor node weather station configuration.</p>
 
+<p><img src=“images/Notebook.jpg”></p>
+
 <p>One of the more common solutions to this irritating limitation is to modify the SensorTag firmware for continuous Bluetooth advertising. In other words, removing the 2 minute operation limit on the SensorTag and thereby enabling it to keep its CC2650 Bluetooth “Smart” microcontroller unit (MCU) ON all of the time. See this discussion about this process:</p>
 
 <p>“How to modify the TI SensorTag (CC2650STK) Firmware to advertise indefinitely?
@@ -154,9 +156,9 @@
 
 <ul>
 <li><p>Files for Weather Box:</p></li>
-<li><p>Pix = Photographs of Weather Box.</p></li>
-<li><p>STLFiles = the 3D STL format files for printing the Weather Box enclosure</p></li>
-<li><p>Code = the Arduino IDE INO code for programming the ATtiny85</p></li>
+<li><p>Pix = Photographs of Weather Box.(<a href="https://github.com/How2-Oh/weather-box/files/99517/Pix.zip">Pix.zip</a>)</p></li>
+<li><p>STLFiles = the 3D STL format files for printing the Weather Box enclosure. (<a href="https://github.com/How2-Oh/weather-box/files/99459/STLFiles.zip">STLFiles.zip</a>)</p></li>
+<li><p>Code = the Arduino IDE INO code for programming the ATtiny85. (<a href="https://github.com/How2-Oh/weather-box/files/99512/Code.zip">Code.zip</a>)</p></li>
 <li><p>Readme.md = this file</p></li>
 </ul>
         </section>
