--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>High expectations and enthusiasm for easy Internet of Things (IoT) Cloud-based projects based on the Texas Instruments (TI) CC2650 SensorTag (aka SensorTag 2.0) quickly dissipated into a ho-hum “nice idea, but …” afterthought. Why? It’s tough to wrangle the Bluetooth “smart” connectivity into a simple, practical project. Here’s the problem: SensorTag attempts to establish a link with a Bluetooth Low Energy compliant device by advertising its device ID for approximately 2 minutes. This advertising period is initiated by a user pressing a button located on SensorTag. This direct user physical contact handicaps installing SensorTag in a remote or inaccessible area. Unfortunately, one of the primary use applications for SensorTag is in a remote sensor node weather station configuration.</p>
 
-<p><img src=“images/Notebook.jpg”></p>
+<p><img src=images/Notebook.jpg></p>
 
 <p>One of the more common solutions to this irritating limitation is to modify the SensorTag firmware for continuous Bluetooth advertising. In other words, removing the 2 minute operation limit on the SensorTag and thereby enabling it to keep its CC2650 Bluetooth “Smart” microcontroller unit (MCU) ON all of the time. See this discussion about this process:</p>
 
